Fixed styling on planned items in registration view, and spacing.

--- a/myplan-web/src/main/webapp/themes/ksap/stylesheets/registration/activity.less
+++ b/myplan-web/src/main/webapp/themes/ksap/stylesheets/registration/activity.less
@@ -39,7 +39,7 @@
 
             div {
                 display: inline-block;
-                margin: 0 0 0 @marginDefault;
+                margin: 0 0 0 7px;
                 vertical-align: top;
                 color: @textColorMin;
 
@@ -73,6 +73,11 @@
             display: inline-block;
             float: none;
             vertical-align: top;
+            margin: 0 0 0 7px;
+
+            &:first-child {
+                margin: 0;
+            }
         }
     }
 }
@@ -81,6 +86,10 @@
     width: 24px;
     color: @textColor !important;
     .bold();
+
+    &.registrationActivity__sectionCd--planned {
+        background: url('../images/planned_activity_bkgrd.png');
+    }
 }
 .registrationActivity__credits {
     width: 72px;
