--- a/myplan-web/src/main/webapp/themes/ksap/stylesheets/registration/form.less
+++ b/myplan-web/src/main/webapp/themes/ksap/stylesheets/registration/form.less
@@ -18,6 +18,10 @@
     &:first-child {
         margin: 0;
     }
+
+    .uif-subCollection.uif-boxLayoutVerticalItem {
+        margin: 0;
+    }
 }
 .registrationForm__courseTitle {
     border-bottom: @dottedBorderStyle;
